# emga

./: .gitignore  CMakeLists.txt  README.md  call_backs.h  lv_conf.h  main.c  main.h  显示器模式.txt
layout/: base.h  base_layout.h  content_section.h
style/: base_style.h
